--- a/index.html
+++ b/index.html
@@ -758,6 +758,41 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <div class="project-icon"><i class="fas fa-heartbeat"></i></div>
+                        <div class="project-title">Anemia Detection via Nutrient Deficiency</div>
+                    </div>
+                    <div class="project-content">
+                        <p style="color: var(--text-secondary); margin-bottom: 15px;">AI-powered health analysis system that analyzes nail, eye, and tongue images to detect anemia and nutritional deficiencies, determining overall health status.</p>
+                        <div class="project-tech">
+                            <span class="tech-badge">Image Processing</span>
+                            <span class="tech-badge">Computer Vision</span>
+                            <span class="tech-badge">Deep Learning</span>
+                            <span class="tech-badge">CNN</span>
+                            <span class="tech-badge">Healthcare AI</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section class="section experience">
+        <div class="container">
+            <h2 class="section-title">Professional Experience</h2>
+            
+            <div class="education-item">
+                <div class="edu-degree">AI/ML Engineering Team Co-Lead</div>
+                <div class="edu-school">CropNow</div>
+                <div class="edu-period">3 Months</div>
+                <div class="edu-details">
+                    • Led AI/ML initiatives and collaborated with team members on product development<br>
+                    • Implemented machine learning solutions for agricultural optimization<br>
+                    • Contributed to technical decision-making and project architecture
+                </div>
             </div>
         </div>
     </section>
